# CS-420-Projet

./: CMakeLists.txt  README.md
Program2/: Makefile  README.txt  advect1d.c  advection.c  bc.c  error.c  ic.c  pgm2.c  plot1d.c  project  project.c  sfc.c  stats.c
Program2_mpi/: Makefile  advect1d.c  advection.c  project  stats.c
Program2_omp/: project.c
advection-mpi/: .main.c.swp  Makefile  README-Plotting-C.txt  advect  advect1d.c  advection.c  bc.c  comms.c  helpers.c  helpers.h  ic.c  main.c  project.c
advection-omp/: Makefile  advect1d.c  advection.c  bc.c  benchmark.py  constants.h  contr.c  helpers.c  helpers.h  ic.c  listing.txt  main.c  stats.c
advection-serial/: Makefile  advection.c  helpers.c  helpers.h  ic.c  main.c  project.c  stats.c
batchFiles/: mp3-benchmark.7046213.out  mp3-benchmark.7046214.out
results/: node_1.txt  node_16.txt  node_2.txt  node_4.txt  node_8.txt  strong_1.txt  strong_16.txt  strong_2.txt  strong_4.txt  strong_8.txt  weak_16.txt  weak_2.txt  weak_4.txt  weak_8.txt
scripts/: batch_script.run  batch_script4.run  compile_script.sh  submit_batch.sh
stencil/: CMakeLists.txt  main.c  stencil.c  stencil.h
tests/: Makefile  checker  checker.c  test.sh
tests/solutions/: sol-1.txt  sol-2.txt  sol-3.txt  sol-4.txt
tests/testCases/: test-1.txt  test-2.txt  test-3.txt  test-4.txt
tools/: helpers.c  helpers.h  utils.c  utils.h
